katalog/tests/ingresses-tests.yaml
# Kubernetes ingress object with ingressClass internal

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-internal
spec:
  ingressClassName: internal
  rules:
    - http:
        paths:
          - path: /internal
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
---
# Kubernetes ingress object with ingressClass external
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-external
spec:
  ingressClassName: external
  rules:
    - http:
        paths:
          - path: /external
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
